--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https:/AppsSamurai/appssamurai.github.io/",
+    "homepage": "https:/appssamurai.github.io/",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
